@startuml
'https://plantuml.com/class-diagram

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

class Graphe #back:Wheat;line.bold {
    -taille[*][*]: Integer
    -estObstacle[*][*]: Boolean
    -airGraphe:Integer
    -nbrNoeudDansGraphe:Integer

    <<Create>>Graphe(longueur, largueur)
    +CreationEmplacement();
    +getEmplacementNoeud(n:Noeud): Integer
    +getAirGraphe(): Integer
    +getNbrNoeudDansGraphe(): Integer
    +getTaille() : [*][*] Integer
    +getEstObstacle() : [*][*] Boolean
}

class Noeud{
    -coordonneeNoeud: Integer
    -colonie: Colonie

    <<Create>>Noeud(g:Graphe)
    +getCoordonneNoeud()
    +setCoordonneNoeud()
    +getColonie()
}

class Aretes {
    -tab[*][*]: Integer
    -estObstacle[*][*]: Boolean
    -coordonnee: Integer
    -listNoeud: ArrayList<Integer>
    -n: Noeud

    <<Create>>Aretes(g:Graphe, n:Noeud)
    +rechercheAretes()
    -ajouterAretes(x.coordonnee, y.coordonnee)
    -verficationNoeud(x.coordonnee, y.coordonnee):Boolean
    -deplacementNoeud()
}

class Colonie {
    -{static} nombreColonie = 0:Integer
    -numColonie:Integer
    <<Create>>Colonie()
    +getNumColonie():Integer
}

interface Fourmis <<interface>> #lightblue;line:blue {
    +setPositionActuel(N:Noeud)
    +setResidenceNaissance(N:Noeud)
    +setColonie()
}
class Reine #lightblue;line:green {
    -residenceNaissance:Noeud
    -colonie:Colonie
    -positionActuel:Noeud

    <<Create>>Reine(g:Graphe, n:Noeud)
    +donnerNaissance(Integer, N:Noeud, C:Colonie, G:Graphe)
    +setPositionActuel(N:Noeud)
    +setResidenceNaissance(N:Noeud)
    +setColonie(C:Colonie)
}

class Soldat #lightblue;line:green {
    -residenceNaissance:Noeud
    -colonie:Colonie
    -positionActuel:Noeud
    -ListeNoeud:ArrayList<Integer>
    -numeroSoldat:Integer
    -graphe:Graphe

    <<Create>>Soldat(N:Noeud, C:Colonie, G:Graphe, Integer)
    +setPositionActuel(N:Noeud)
    +setResidenceNaissance(N:Noeud)
    +setColonie(C:Colonie)
    +patrouille(N:Noeud)
    +enMouvement()
}

class Etranger #lightblue;line:green{
    -residenceNaissance:Noeud
    -colonie:Colonie
    -positionActuel:Noeud

    +setPositionActuel(N:Noeud)
    +setResidenceNaissance(N:Noeud)
    +setColonie(C:Colonie)
}


Graphe "1" *--> "0..*" Noeud

Noeud "\n1" *-> "0..*" Aretes : \n Relie  >
Aretes "0..*" -> "1" Noeud : Relie noeuds adjacents >

Graphe .. Aretes : <<use>>
Noeud "1" *-left> "1" Colonie
Colonie <.. Fourmis : <<use>>
Reine "1" <-lefto "1" Colonie
Noeud "1" o--> Fourmis : Contient
Fourmis --> Reine : Occupé par une >
Fourmis --> "\t\t0..*" Etranger : Peut contenir >
Reine "1" --> "*" Soldat : Donne naissance >

@enduml